--- a/package.json
+++ b/package.json
@@ -22,5 +22,12 @@
   "homepage": "https://github.com/moeabdol/node-newsletter#readme",
   "devDependencies": {
     "eslint": "^4.12.1"
+  },
+  "dependencies": {
+    "async": "^2.6.0",
+    "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "morgan": "^1.9.0"
   }
 }
