--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
     "morgan": "^1.9.0"
   }
 }
