--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "jquery": "^3.2.1",
