--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
+    "connect-mongo": "^2.0.0",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "express-flash": "0.0.2",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "jquery": "^3.2.1",
     "morgan": "^1.9.0",
     "popper.js": "^1.12.9"
